@@ -1,3 +1,7 @@
+2008-05-31  Jonh Wendell <jwendell@gnome.org>
+
+	* src/vinagre-app.c: Persist changes in menu shortcuts (Ubuntu #233918).
+
 2008-05-30  Jonh Wendell <jwendell@gnome.org>
 
 	* src/vinagre-window.c: Drop F11 key handling.
